--- a/ej4a.html
+++ b/ej4a.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Ejercicio 4a</h1>
+    <p><a href="ej4b.html" title="enlace 4b"> Aquí </a> puedes ver el ejercicio 4b</p>
     
 </body>
 </html>
