--- a/ej4b.html
+++ b/ej4b.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Ejercicio 4b</h1>
+    <p><a href="ej4a.html" title="enlace 4a"> Aquí </a> puedes ver el ejercicio 4a</p>
     
 </body>
 </html>
