--- a/ej2.html
+++ b/ej2.html
@@ -6,12 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>SEGUNDA PÁGINA</h1>
+    <h1>SEGUNDO EJERCICIO</h1>
     <h2>Primer Subtítulo</h2>
-    <p>Este es <strong>el primer párrafo</strong></p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur ducimus ipsa autem doloribus fugiat mollitia minima consequatur enim culpa nisi! <b>el primer párrafo</b></p>
     <h2>Segundo subtítulo</h2>
-    <p>Este es el <em>segundo párrafo</em></p>
-    <p>este es el <em>tercer párrafo</em></p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A, delectus? <i>segundo párrafo</i></p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, ducimus!<i>tercer párrafo</i></p>
 
 </body>
 </html>
