--- a/ej7.html
+++ b/ej7.html
@@ -6,21 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
-        <a href="http://www.google.com" title="buscador Google"> Google</a>
+    <ul>
+        <li><a href="http://www.google.com" title="buscador Google"> Google</a></li>
         <br>
-        <a href="http://www.bing.com" title="buscador Bing"> Bing</a>
+        <li><a href="http://www.bing.com" title="buscador Bing"> Bing</a></li>
         <br>
-        <a href="http://www.yahoo.com" title="buscador Yahoo"> Yahoo</a>
+        <li><a href="http://www.yahoo.com" title="buscador Yahoo"> Yahoo</a></li>
         <br>
-        <a href="http://www.duckduckgo.com" title="buscador duckduckGo"> DuckDuckGo</a>
+        <li><a href="http://www.duckduckgo.com" title="buscador duckduckGo"> DuckDuckGo</a></li>
     
 
 
 
 
 
-    </p>
+    </ul>
     
 </body>
 </html>
