--- a/ej8.html
+++ b/ej8.html
@@ -10,6 +10,7 @@
     <ul>
 <li><img src="Labrador_Retriever.jpg" alt="labrador" ></a></li>
 <li><img src="pointer.jpg" alt="pointer"></a> </li>
+<li><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.tqel.es%2Fes%2Fcontent%2Frazas-perros%2Fcocker.html&psig=AOvVaw2Th7lFFRDsJWDC94gasF0Y&ust=1698782384887000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCPip_dbHnoIDFQAAAAAdAAAAABAE></li>
 
 
 
