--- a/ej8.html
+++ b/ej8.html
@@ -8,9 +8,13 @@
 <body>
     
     <ul>
-<li><img src="Labrador_Retriever.jpg" alt="labrador" ></a></li>
-<li><img src="pointer.jpg" alt="pointer"></a> </li>
-<li><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.tqel.es%2Fes%2Fcontent%2Frazas-perros%2Fcocker.html&psig=AOvVaw2Th7lFFRDsJWDC94gasF0Y&ust=1698782384887000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCPip_dbHnoIDFQAAAAAdAAAAABAE></li>
+<li><img src="/images/Labrador_Retriever.jpg" alt="labrador" width="200px" ></a></li>
+<li><img src="/images/pointer.jpg" alt="pointer" width="200px"> </li>
+<li><img src="https://t3.ftcdn.net/jpg/05/76/34/32/360_F_576343242_P5H7QfFXgWufZZOSGVsZJZ3EnNo5OBm3.png" alt="cocker" width="200px"></li>
+<li>
+    <img src="https://pngimg.es/d/dalmatian_PNG22.png" alt="Dálmata" width="200px">
+
+</li>
 
 
 
