--- a/ej5.html
+++ b/ej5.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Ejercicio 5</h1>
     <p>Este es el ejercicio 5. En el mismo presentamos dos imágenes.</p>
-    <img src="platano.webp" alt="imagen de un plátano" width="100px"> <br> <img src="https://ik.imagekit.io/ikmedia/backlit.jpg" alt="Imagen de globo" width="100px">
+    <img src="/images/platano.webp" alt="imagen de un plátano" width="100px"> <br> <img src="https://ik.imagekit.io/ikmedia/backlit.jpg" alt="Imagen de globo" width="100px">
 
     
 </body>
