--- a/ej4a.html
+++ b/ej4a.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Ejercicio 4a</h1>
-    <p><a href="ej4b.html" title="enlace 4b"> Aquí </a> puedes ver el ejercicio 4b</p>
-    
-</body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati nihil
+      fuga ad exercitationem minima voluptatibus iusto ab reiciendis cupiditate
+      aliquid.<a href="ej4b.html" title="enlace 4b"> Aquí </a> puedes ver el
+      ejercicio 4b
+    </p>
+  </body>
 </html>
