--- a/ej4b.html
+++ b/ej4b.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Ejercicio 4b</h1>
-    <p><a href="ej4a.html" title="enlace 4a"> Aquí </a> puedes ver el ejercicio 4a</p>
-    
-</body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+      cumque quaerat iure labore omnis, debitis animi amet quas nesciunt esse.<a
+        href="ej4a.html"
+        title="enlace 4a"
+      >
+        Aquí
+      </a>
+      puedes ver el ejercicio 4a
+    </p>
+  </body>
 </html>
