--- a/ej5.html
+++ b/ej5.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Ejercicio 5</h1>
     <p>Este es el ejercicio 5. En el mismo presentamos dos imágenes.</p>
-    <img src="/images/platano.webp" alt="imagen de un plátano" width="100px"> <br> <img src="https://ik.imagekit.io/ikmedia/backlit.jpg" alt="Imagen de globo" width="100px">
-
-    
-</body>
+    <img src="/images/platano.webp" alt="imagen de un plátano" width="100px" />
+    <br />
+    <img
+      src="https://ik.imagekit.io/ikmedia/backlit.jpg"
+      alt="Imagen de globo"
+      width="100px"
+    />
+  </body>
 </html>
