--- a/ej8.html
+++ b/ej8.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
-    <ul>
-<li><img src="/images/Labrador_Retriever.jpg" alt="labrador" width="200px" ></a></li>
-<li><img src="/images/pointer.jpg" alt="pointer" width="200px"> </li>
-<li><img src="https://t3.ftcdn.net/jpg/05/76/34/32/360_F_576343242_P5H7QfFXgWufZZOSGVsZJZ3EnNo5OBm3.png" alt="cocker" width="200px"></li>
-<li>
-    <img src="https://pngimg.es/d/dalmatian_PNG22.png" alt="Dálmata" width="200px">
 
-</li>
+<body>
+
+    <ul>
+        <li><img src="/images/Labrador_Retriever.jpg" alt="labrador" width="200px"></a></li>
+        <li><img src="/images/pointer.jpg" alt="pointer" width="200px"> </li>
+        <li><img src="https://t3.ftcdn.net/jpg/05/76/34/32/360_F_576343242_P5H7QfFXgWufZZOSGVsZJZ3EnNo5OBm3.png"
+                alt="cocker" width="200px"></li>
+        <li>
+            <img src="https://pngimg.es/d/dalmatian_PNG22.png" alt="Dálmata" width="200px">
+
+        </li>
 
 
 
     </ul>
-    
+
 </body>
+
 </html>
