--- a/ej9.html
+++ b/ej9.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <ul>
-        <li><a href="https://es.wikipedia.org/wiki/Labrador_retriever" title="labrador-wikipedia"><img src="/images/Labrador_Retriever.jpg" alt="labrador" width="200px" ></a></li>
+        <li><a href="https://es.wikipedia.org/wiki/Labrador_retriever" title="labrador-wikipedia"><img
+                    src="/images/Labrador_Retriever.jpg" alt="labrador" width="200px"></a></li>
         <li><a href="https://es.wikipedia.org/wiki/Pointer_inglés" title="pointer-wikipedia">
-            <img src="/images/pointer.jpg" alt="pointer" width="200px"></a> </li>
-        <li><a href="https://es.wikipedia.org/wiki/Cocker" title="cocker-wikipedia"><img src="https://t3.ftcdn.net/jpg/05/76/34/32/360_F_576343242_P5H7QfFXgWufZZOSGVsZJZ3EnNo5OBm3.png" alt="cocker" width="200px"></a></li>
+                <img src="/images/pointer.jpg" alt="pointer" width="200px"></a> </li>
+        <li><a href="https://es.wikipedia.org/wiki/Cocker" title="cocker-wikipedia"><img
+                    src="https://t3.ftcdn.net/jpg/05/76/34/32/360_F_576343242_P5H7QfFXgWufZZOSGVsZJZ3EnNo5OBm3.png"
+                    alt="cocker" width="200px"></a></li>
         <li><a href="https://es.wikipedia.org/wiki/Dálmata_(perro)" title="dálmata">
-            <img src="https://pngimg.es/d/dalmatian_PNG22.png" alt="Dálmata" width="200px"></a>
+                <img src="https://pngimg.es/d/dalmatian_PNG22.png" alt="Dálmata" width="200px"></a>
         </li>
 
-    
+
 </body>
+
 </html>
