--- a/ej1.html
+++ b/ej1.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>PRIMERA PÁGINA</h1>
-    <p>Esta es la primera página</p>
-</body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor neque
+      porro, corporis illum soluta libero doloremque deleniti delectus excepturi
+      quisquam!
+    </p>
+  </body>
 </html>
