--- a/ej2.html
+++ b/ej2.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>SEGUNDO EJERCICIO</h1>
     <h2>Primer Subtítulo</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur ducimus ipsa autem doloribus fugiat mollitia minima consequatur enim culpa nisi! <b>el primer párrafo</b></p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur ducimus
+      ipsa autem doloribus fugiat mollitia minima consequatur enim culpa nisi!
+      <b>el primer párrafo</b>
+    </p>
     <h2>Segundo subtítulo</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A, delectus? <i>segundo párrafo</i></p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, ducimus!<i>tercer párrafo</i></p>
-
-</body>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. A, delectus?
+      <i>segundo párrafo</i>
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. A, ducimus!<i
+        >tercer párrafo</i
+      >
+    </p>
+  </body>
 </html>
