--- a/ej3.html
+++ b/ej3.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>PÁGINA 3</h1>
-    <p>Esta es la página 3</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, quis. Quos
+      nesciunt reiciendis temporibus, accusamus quas soluta repudiandae
+      explicabo ut?
+    </p>
     <h1>Estos son los enlaces:</h1>
     <a href="https://www.google.com" title="Buscador Google">Google.com</a>
     <a href="https://www.bing.com" title="Buscador bing">Bing.com</a>
-</body>
+  </body>
 </html>
