--- a/ej10.html
+++ b/ej10.html
@@ -32,7 +32,7 @@
       facilis atque iusto ipsam corporis distinctio deleniti cum, voluptatum
       vitae iure error sint ducimus dolores dignissimos perspiciatis!
     </p>
-    <img src="platano.webp" alt="platano" />
+    <img src="/images/platano.webp" alt="platano" width="200px"/>
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit iure
       laborum veniam, aspernatur, quae ut incidunt voluptas illum quis culpa
