--- a/ej11a.html
+++ b/ej11a.html
@@ -13,6 +13,7 @@
   </header>
   <main>
     <h2>Perros</h2>
+    <a href="ej11b.html" title="labrador">cambiar a labrador</a>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
       sunt a aut. Dolor maiores laborum, eius et fugiat blanditiis
@@ -26,7 +27,7 @@
       facilis atque iusto ipsam corporis distinctio deleniti cum, voluptatum
       vitae iure error sint ducimus dolores dignissimos perspiciatis!
     </p>
-    <img src="pointer.jpg" alt="pointer" />
+    <img src="/images/pointer.jpg" alt="pointer" />
 
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit iure
@@ -41,7 +42,7 @@
       minima quos nobis omnis. Reiciendis possimus magnam nostrum amet tempora
       accusamus vero optio laborum. Suscipit voluptatibus explicabo iure.
     </p>
-    <a href="ej11b.html" title="labrador">cambiar a labrador</a>
+    
   </main>
   <footer>
     <p>
