--- a/ej11b.html
+++ b/ej11b.html
@@ -13,6 +13,7 @@
   </header>
   <main>
     <h2>Perros</h2>
+    <a href="ej11a.html" title="pointer">cambiar a pointer</a>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
       sunt a aut. Dolor maiores laborum, eius et fugiat blanditiis
@@ -26,7 +27,7 @@
       facilis atque iusto ipsam corporis distinctio deleniti cum, voluptatum
       vitae iure error sint ducimus dolores dignissimos perspiciatis!
     </p>
-    <img src="Labrador_Retriever.jpg" alt="labrador" />
+    <img src="/images/Labrador_Retriever.jpg" alt="labrador" />
 
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit iure
@@ -41,7 +42,7 @@
       minima quos nobis omnis. Reiciendis possimus magnam nostrum amet tempora
       accusamus vero optio laborum. Suscipit voluptatibus explicabo iure.
     </p>
-    <a href="ej11a.html" title="pointer">cambiar a pointer</a>
+    
   </main>
   <footer>
     <p>
